--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.show-sql=${SHOW_SQL:true}
 #for creating schemas and tables
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # oauth2 configurations
 #spring.jpa.properties.hibernate.format_sql=true
