--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=myscm
 
 server.baseUrl=${BASE_URL:http://localhost:8080}
 server.port=${SERVER_PORT:8080}
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:scmdb}
+spring.datasource.url=spring.datasource.url=jdbc:mysql://db:3306/mydb
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:Shreyash@22}
 
