--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.baseUrl=${BASE_URL:http://localhost:8080}
 server.port=${SERVER_PORT:8080}
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:scmdb}
 spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:Shreyash@22}
+spring.datasource.password=${MYSQL_PASSWORD:}
 
 #jpa configurations
 spring.jpa.show-sql=${SHOW_SQL:true}
